# haskell-examples

./: README.md  SimpleParser.hs
check-path/: README.md  check-path.cabal  demo-ansi-terminal.hs  stack.yaml
check-path/src/: Main.hs
check-path/src/Checkpath/: Histogram.hs  ListUtils.hs
currying/: Main.hs
monads-example/: README.md  monads-example.cabal
monads-example/src/: Box.hs  Lib.hs
parsec-example/: parsec-example.cabal
parsec-example/app/: Main.hs
parsec-example/src/: ParsecExample.hs
parsec-example/test/: DataGenerator.hs
parsec-example/test/resources/: data-1.txt  data-2.txt
parser/: Parser.hs
positional-parser/: Main.hs  PositionalParser.hs  positional-parser  positional-parser.hs
type-classes/: Main  Main.hs
