name:                check-path
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/hbobenicio/check-path#readme
license:             BSD3
license-file:        LICENSE
author:              Hugo Benício
maintainer:          hbobenicio@gmail.com
copyright:           2017 Hugo Benício
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable check-path
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split >= 0.2 && < 0.3
